--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <a href="https://openweathermap.org/" class="openWeatherReq">Weather data provided by OpenWeather.</a>
     </footer>   
 
-    <script src="current.js">___</script>
-    <script src="forecast.js">___</script>
+    <script src="./current.js">___</script>
+    <script src="./forecast.js">___</script>
 </body>
 </html>
