--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>weather dashboard</title>
 </head>
 <body>
-    <h1>☀️weather dashboard🌈</h1>
+    <h1>🍌weather dashboard🌈</h1>
     <div class="everythingBelowTheHeaderLol">
         <div class="containerLeft">
             <h5>search by city name</h5>
